
### MSI

 * [Invoke-WindowsInstaller](http://get-carbon.org/help/Invoke-WindowsInstaller.html) no longer writes messages with `Write-Host`. Improved error message if installation fails.

### MSMQ

 * [Grant-MsmqMessageQueuePermission](http://get-carbon.org/help/Grant-MsmqMessageQueuePermission.html) no longer writes messages with `Write-Host`.

## Bug Fixes

### General

 * Importing Carbon gives an error if `PATH` environment variable contains an empty path.

### Certificates

 * [Get-Certificate](http://get-carbon.org/help/Get-Certificate.html) couldn't open CA/CertificateAuthority store (fixes issue [#130](https://bitbucket.org/splatteredbits/carbon/issue/130/get-certificate-doesnt-find-any))
 * Extended script property `DisplayName` on `X509Store` objects returning wrong store name for custom stores, now returns an empty string.
 
 ### Path

 * [Resolve-PathCase](http://get-carbon.org/help/Resolve-PathCase.html) didn't work under Windows 2012 R2.

 
# 1.7.0 (30 April 2014)

## Bug Fixes

### File System

 * [Disable-NtfsCompression](http://get-carbon.org/help/Disable-NtfsCompression.html) now *really* supports multiple paths.
 * [Enable-NtfsCompression](http://get-carbon.org/help/Enable-NtfsCompression.html) now *really* supports multiple paths.

There is now [a Carbon support mailing list](http://www.freelists.org/list/carbon).

## Enhancements

### General

 * Import-Carbon.ps1 now supports the `-WhatIf` switch.
 * Import-Carbon.ps1 now hides verbose log messages when removing/importing Carbon even when supplying the `-Verbose` switch because I think the verbose output is too verbose and not helpful at all.
 * Import-Carbon.ps1 now supports adding a prefix when importing the Carbon module (with the `Prefix` parameter) to avoid name collisions and [follow best practices](http://blogs.msdn.com/b/powershell/archive/2014/04/07/what-s-in-a-name-using-the-ps-prefix.aspx).
 
### Certificates
